# XMLer

./: .travis.yml  CMakeLists.txt  CMakeQt4.txt  CMakeQt5.txt  README  README.md  XMLer.rc  config.h.in  main.cpp  xmler.qrc
forms/: documentpropertiesdialog.ui  mainwindow.ui
icons/: XMLer.icns  XMLer.xcf  index.theme  index.theme~
src/: .dir-locals.el  attrxmlnode.cpp  attrxmlnode.h  basexmlnode.cpp  basexmlnode.h  commentxmlnode.cpp  commentxmlnode.h  dataxmlnode.cpp  dataxmlnode.h  documentpropertiesdialog.cpp  documentpropertiesdialog.h  documentxmlnode.cpp  documentxmlnode.h  elementxmlnode.cpp  elementxmlnode.h  mainwindow.cpp  mainwindow.h  xmlerapplication.cpp  xmlerapplication.h  xmlerexception.cpp  xmlerexception.h  xmlerfileoperthread.cpp  xmlerfileoperthread.h  xmlerfindthread.cpp  xmlerfindthread.h  xmlerfindwidget.cpp  xmlerfindwidget.h  xmlerhandler.cpp  xmlerhandler.h  xmlerinputsource.cpp  xmlerinputsource.h  xmlerloadfilethread.cpp  xmlerloadfilethread.h  xmlermodel.cpp  xmlermodel.h  xmlersavefilethread.cpp  xmlersavefilethread.h
tools/: Info.plist.in  XMLer.desktop.in  XMLer.iss  XMLer.spec  copy-image.sh  make-source-archive
tools/SlackBuild/: XMLer.SlackBuild  slack-desc
translations/: XMLer_ru.ts
